Add log_in_as test method, modify fixtures, test invalid voter creation

--- a/test/fixtures/staffs.yml
+++ b/test/fixtures/staffs.yml
@@ -1,8 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  email: MyString
+  name: George W. Bush
+  email: gdubya@usa.com
   password_digest: MyString
 
 two:
